addons/openerp/static/css/notebook.css
div.notebook {
    overflow: hidden;
    margin: 0 0 5px;
    padding: 0;
    border-radius: 7px;
    -moz-border-radius: 7px;
    -webkit-border-radius: 7px;
    background: #fff;
    box-shadow: 0 1px 1px #ddd;
    -moz-box-shadow: 0 1px 1px #ddd;
    -webkit-box-shadow: 0 1px 1px #ddd;
}

div.notebook-tabs {
    position: relative;
    overflow: hidden;
    background: #ddd;
    border-top-left-radius: 7px;
    border-top-right-radius: 7px;
    -moz-border-radius-topright: 7px;
    -webkit-border-top-right-radius: 7px;
    -moz-border-radius-topleft: 7px;
    -webkit-border-top-left-radius: 7px;
    box-shadow: 0 1px 1px #FFFFFF;
    -moz-box-shadow: 0 1px 1px #FFFFFF;
    -webkit-box-shadow: 0 1px 1px #FFFFFF;
}

div.notebook-tabs-left,div.notebook-tabs-right {
    position: absolute;
    top: 0px;
    width: 18px;
    display: none;
    cursor: pointer;
    z-index: 2;
}

div.notebook-tabs-right {
    right: 0px;
    background: #F0EEEE url(../images/notebook/nb-right.png) no-repeat center;
}

div.notebook-tabs-left {
    left: 0px;
    background: #F0EEEE url(../images/notebook/nb-left.png) no-repeat center;
}

div.notebook-tabs-right-disabled {
    background: #F0EEEE url(../images/notebook/nb-right-d.png) no-repeat center;
    cursor: default;
}

div.notebook-tabs-left-disabled {
    background: #F0EEEE url(../images/notebook/nb-left-d.png) no-repeat center;
    cursor: default;
}

div.notebook-tabs-wrap {
    position: relative;
    overflow: hidden;
}

div.notebook-tabs-wrap-scrollable {
    margin: 0 18px;
}

ul.notebook-tabs-strip {
    display: block;
    float: left;
    /*width: 5000px;*/
    background: transparent;
    padding: 0;
    margin: 0;
    list-style: none;
}

li.notebook-tab {
    position: relative;
    float: left;
    font-size: 1em;
    font-weight: bold;
    text-transform: uppercase;
    margin-right: 2px;
    background: transperant;
    border-radius: 7px 7px 0 0;
    -moz-border-radius: 7px 7px 0 0;
    -webkit-border-radius: 7px 7px 0 0;
}

li.notebook-tab-active, li.notebook-tab:hover {
    background: #fff;
}

li.notebook-tab a.tab-title {
    display: block;
    outline: none;
    text-decoration: none !important;
    float: left;
    height: 17px;
    padding: 7px 7px 0 7px;
    color: #55555;
    text-shadow: None;
}

li.notebook-tab-active a.tab-title, li.notebook-tab:hover a.tab-title {
    color: #55555;
}

li.notebook-tab span.tab-close {
    position: absolute;
    right: 2px;
    top: 2px;
    width: 12px;
    height: 12px;
    background: transparent url(../images/notebook/tab-close.png) no-repeat center;
    cursor: pointer;
}

li.notebook-tab-closable a.tab-title {
    padding-right: 18px;
}

div.notebook-pages {
    padding: 5px 5px 1px;
}

div.notebook-page {
    display: none;
}

div.notebook-page-active {
    display: block;
}

